--- a/package.json
+++ b/package.json
@@ -3,30 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@brainhubeu/react-carousel": "^1.10.27",
+    "@brainhubeu/react-carousel": "^1.19.26",
     "cors": "^2.8.5",
     "date-fns": "2.0.0-alpha.27",
-    "firebase": "^7.6.1",
-    "pure-react-carousel": "^1.24.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-lazy-load-image-component": "^1.3.2",
-    "react-lazyload": "^2.5.0",
+    "firebase": "^7.19.1",
+    "pure-react-carousel": "^1.27.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-lazy-load-image-component": "^1.5.0",
+    "react-lazyload": "^2.6.9",
     "react-redux": "^5.1.1",
-    "react-redux-firebase": "^2.2.6",
-    "react-redux-toastr": "^7.5.1",
-    "react-router-dom": "^5.1.2",
+    "react-redux-firebase": "^2.5.1",
+    "react-redux-toastr": "^7.6.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.1",
+    "react-stripe-checkout": "^2.6.3",
+    "redux": "^4.0.5",
     "redux-auth-wrapper": "^2.1.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-firestore": "^0.3.2",
-    "redux-form": "^7.4.2",
+    "redux-form": "^7.4.3",
     "redux-thunk": "^2.3.0",
     "revalidate": "^1.2.0",
     "save-dev": "0.0.1-security",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.1",
+    "semantic-ui-react": "^0.88.2",
     "serviceworker-webpack-plugin": "^1.0.1"
   },
   "scripts": {
@@ -55,6 +56,6 @@
     "@types/react-redux-toastr": "^7.4.1",
     "@types/react-router-dom": "^4.3.3",
     "source-map-explorer": "^1.5.0",
-    "typescript": "^3.3"
+    "typescript": "^3.9.7"
   }
 }
