--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,6 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "black",
+  "gcm_sender_id": "767219364985",
   "background_color": "black"
 }
